--- a/app/build.gradle
+++ b/app/build.gradle
@@ -78,4 +78,7 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:11.8.0'
     // google direction
     implementation 'com.akexorcist:google-direction-library:1.2.1'
+
+    // razor pay payment gateway
+    implementation 'com.razorpay:checkout:1.6.26'
 }
